# pyavaccess

./: README.md  pyproject.toml  requirements.txt  setup.py
pyavaccess/: __init__.py  avaccess_serial.py  hdmi_matrix.py
pyavaccess/config/: matrix_devices.py
tests/: test_4KMX42.py
