[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyavaccess"
version = "0.0.1"
description = "Automation library for AV Access devices"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "pyserial>=3.5",
]
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/latelylk/pyavaccess"
"Bug Tracker" = "https://github.com/latelylk/pyavaccess/issues"
